@@ -3,25 +3,24 @@ package com.gamma.backend.controller;
 import com.gamma.backend.model.Curso;
 import com.gamma.backend.model.Estado;
 import com.gamma.backend.repository.CursoRepository;
+import com.gamma.backend.service.LogService;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.mockito.InjectMocks;
-import org.mockito.Mock;
-import org.mockito.MockitoAnnotations;
-import org.springframework.http.HttpStatus;
-import org.springframework.http.ResponseEntity;
+import org.mockito.*;
 
-import java.util.List;
-import java.util.Map;
-import java.util.Optional;
+import java.util.*;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
+import org.springframework.http.ResponseEntity;
 
 class CursoControllerTest {
 
     @Mock
     private CursoRepository cursoRepository;
+
+    @Mock
+    private LogService logService;
 
     @InjectMocks
     private CursoController cursoController;
@@ -31,90 +30,99 @@ class CursoControllerTest {
         MockitoAnnotations.openMocks(this);
     }
 
+    // Test GET /curso/list
     @Test
-    void listarCursos_ReturnsOk() {
-        // Arrange
+    void testListarCursos() {
         Curso curso1 = new Curso();
-        curso1.setCodigoCurso("C001");
+        curso1.setCodigoCurso("MAT");
         curso1.setNombre("Matemáticas");
-        curso1.setEstado(Estado.ACTIVO);
 
         Curso curso2 = new Curso();
-        curso2.setCodigoCurso("C002");
-        curso2.setNombre("Comunicación");
-        curso2.setEstado(Estado.ACTIVO);
+        curso2.setCodigoCurso("LEN");
+        curso2.setNombre("Lenguaje");
 
-        when(cursoRepository.findAll()).thenReturn(List.of(curso1, curso2));
+        List<Curso> cursos = Arrays.asList(curso1, curso2);
 
-        // Act
+        when(cursoRepository.findAll()).thenReturn(cursos);
+
         ResponseEntity<List<Curso>> response = cursoController.listarCursos();
 
-        // Assert
-        assertEquals(HttpStatus.OK, response.getStatusCode());
+        assertEquals(200, response.getStatusCodeValue());
         assertEquals(2, response.getBody().size());
+        verify(logService).addLog(eq("INFO"), contains("listado los cursos"));
+    }
+
+    // Test POST /curso/add
+    @Test
+    void testAgregarCurso() {
+        Curso nuevoCurso = new Curso();
+        nuevoCurso.setCodigoCurso("HIS");
+        nuevoCurso.setNombre("Historia");
+
+        ResponseEntity<?> response = cursoController.agregarCurso(nuevoCurso);
+
+        assertEquals(200, response.getStatusCodeValue());
+        verify(cursoRepository).save(any(Curso.class));
+        verify(logService).addLog(eq("INFO"), contains("nuevo curso"));
+        assertEquals("Curso agregado con éxito", ((Map<?, ?>) response.getBody()).get("mensaje"));
+    }
+
+    // Test PUT /curso/update/{codigoCurso}
+    @Test
+    void testActualizarCursoExistente() {
+        String codigoCurso = "MAT";
+        Curso existente = new Curso();
+        existente.setCodigoCurso(codigoCurso);
+        existente.setNombre("Matemáticas");
+        existente.setEstado(Estado.ACTIVO);
+
+        Curso actualizado = new Curso();
+        actualizado.setNombre("Matemáticas Avanzadas");
+        actualizado.setEstado(Estado.INACTIVO);
+
+        when(cursoRepository.findById(codigoCurso)).thenReturn(Optional.of(existente));
+
+        ResponseEntity<?> response = cursoController.actualizarCurso(codigoCurso, actualizado);
+
+        assertEquals(200, response.getStatusCodeValue());
+        assertEquals("Curso actualizado con éxito", ((Map<?, ?>) response.getBody()).get("mensaje"));
+        verify(cursoRepository).save(existente);
+        assertEquals("Matemáticas Avanzadas", existente.getNombre());
+        assertEquals(Estado.INACTIVO, existente.getEstado());
     }
 
     @Test
-    void agregarCurso_ReturnsOk() {
-        // Arrange
+    void testActualizarCursoNoExistente() {
+        when(cursoRepository.findById("NOEXISTE")).thenReturn(Optional.empty());
+
+        ResponseEntity<?> response = cursoController.actualizarCurso("NOEXISTE", new Curso());
+
+        assertEquals(404, response.getStatusCodeValue());
+    }
+
+    // Test PUT /curso/toggle/{codigoCurso}
+    @Test
+    void testToggleCurso() {
         Curso curso = new Curso();
-        curso.setCodigoCurso("C001");
-        curso.setNombre("Matemáticas");
+        curso.setCodigoCurso("LEN");
+        curso.setEstado(Estado.ACTIVO);
 
-        // Act
-        ResponseEntity<?> response = cursoController.agregarCurso(curso);
+        when(cursoRepository.findById("LEN")).thenReturn(Optional.of(curso));
 
-        // Assert
-        assertEquals(HttpStatus.OK, response.getStatusCode());
-        assertEquals(Map.of("mensaje", "Curso agregado con éxito"), response.getBody());
-        verify(cursoRepository, times(1)).save(curso);
-        assertEquals(Estado.ACTIVO, curso.getEstado());
+        ResponseEntity<?> response = cursoController.toggleCurso("LEN");
+
+        assertEquals(200, response.getStatusCodeValue());
+        assertEquals("Estado del curso actualizado con éxito", ((Map<?, ?>) response.getBody()).get("mensaje"));
+        assertEquals(Estado.INACTIVO, curso.getEstado()); // Verifica que cambió
+        verify(cursoRepository).save(curso);
     }
 
     @Test
-    void actualizarCurso_ReturnsOk() {
-        // Arrange
-        Curso cursoExistente = new Curso();
-        cursoExistente.setCodigoCurso("C001");
-        cursoExistente.setNombre("Matemáticas");
-        cursoExistente.setEstado(Estado.ACTIVO);
+    void testToggleCursoNoEncontrado() {
+        when(cursoRepository.findById("NOEXISTE")).thenReturn(Optional.empty());
 
-        Curso cursoDetails = new Curso();
-        cursoDetails.setNombre("Matemáticas Avanzadas");
-        cursoDetails.setEstado(Estado.INACTIVO);
+        ResponseEntity<?> response = cursoController.toggleCurso("NOEXISTE");
 
-        when(cursoRepository.findById("C001")).thenReturn(Optional.of(cursoExistente));
-        when(cursoRepository.save(any(Curso.class))).thenReturn(cursoExistente);
-
-        // Act
-        ResponseEntity<?> response = cursoController.actualizarCurso("C001", cursoDetails);
-
-        // Assert
-        assertEquals(HttpStatus.OK, response.getStatusCode());
-        assertEquals(Map.of("mensaje", "Curso actualizado con éxito"), response.getBody());
-        verify(cursoRepository, times(1)).save(cursoExistente);
-        assertEquals("Matemáticas Avanzadas", cursoExistente.getNombre());
-        assertEquals(Estado.INACTIVO, cursoExistente.getEstado());
-    }
-
-    @Test
-    void toggleCurso_ReturnsOk() {
-        // Arrange
-        Curso cursoExistente = new Curso();
-        cursoExistente.setCodigoCurso("C001");
-        cursoExistente.setNombre("Matemáticas");
-        cursoExistente.setEstado(Estado.ACTIVO);
-
-        when(cursoRepository.findById("C001")).thenReturn(Optional.of(cursoExistente));
-        when(cursoRepository.save(any(Curso.class))).thenReturn(cursoExistente);
-
-        // Act
-        ResponseEntity<?> response = cursoController.toggleCurso("C001");
-
-        // Assert
-        assertEquals(HttpStatus.OK, response.getStatusCode());
-        assertEquals(Map.of("mensaje", "Estado del curso actualizado con éxito"), response.getBody());
-        verify(cursoRepository, times(1)).save(cursoExistente);
-        assertEquals(Estado.INACTIVO, cursoExistente.getEstado());
+        assertEquals(404, response.getStatusCodeValue());
     }
 }
